@@ -24,6 +24,7 @@
   * [Test-PerformanceCounterCategory](http://get-carbon.org/help/Test-PerformanceCounterCategory.html)
   * [Uninstall-PerformanceCounterCategory](http://get-carbon.org/help/Uninstall-PerformanceCounterCategory.html)
   * [Complete-Jobs](http://get-carbon.org/help/Complete-Jobs.html)
+  * [Get-PowershellPath](http://get-carbon.org/help/Get-PowershellPath.html)
 * Improved whitespace in HTML documentation code samples.
 
 
